@@ -15,6 +15,7 @@
 	- `csrf` verification via `x-csrf-token` header or via URL argument `?csrf=TOKEN`
 	- `RESTBuilder.csrf(token)`
 - added `HTMLMAIL(address, subject, body, [language], [callback])` for sending of raw HTML mail messages
+- added `NPMINSTALL(name, callback)` for installing of 3rd party NPM dependencies
 - `CONF.default_errorbuilder_errors` for handling of all HTTP errors via ErrorBuilder
 - decreased `default_interval_websocket_ping` to `1` minute (from `3`)
 - fixed `message` with `closing bytes` in WebSocket and `WEBSOCKETCLIENT()`
